[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo", "debug", "deprecated", "env", "string", "unicode"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["all-widgets"]}
tokio = { version = "1.33.0", features = ["full"] }
tui = "0.19.0"
